--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
 	width: 100%;
     height: 100%;
 }
+.owl-theme .owl-dots .owl-dot span{
+    background: none;
+}
+.owl-theme .owl-dots .owl-dot:nth-child(3) span{
+  background: none;
+}
+.owl-theme .owl-dots .owl-dot:nth-child(2) span{
+  background: none;
+}
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
@@ -92,6 +101,7 @@
                         <li><a class="nav-link" href="#clients">Activites</a></li>
                         <li><a class="nav-link" href="#faqs">FAQs</a></li>
 						<li><a class="nav-link" href="#contact">Contact</a></li>
+						<li><a class="nav-link" href="login.html">Connection</a></li>
                     </ul>
                 </div>
             </div>
