--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
      <!-- Site Metas -->
-    <title>WELCOME</title>  
+    <title>Mektaba Project</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -80,7 +80,7 @@
 
     <!-- LOADER -->
     <div id="preloader">
-        <img class="preloader" src="images/loaders/loader-app.gif" alt="">
+        <img class="preloader" src="uploads/team_03.jpg" alt="">
     </div><!-- end loader -->
     <!-- END LOADER -->
     <header class="header header_style_01">
